--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="grid"></div>
+  <div class="title">Etch-a-Sketch</div>
+  <div class="container">
+    <div class="grid"></div>
+    <div class="menu"></div>
+  </div>
+  
 </body>
 </html>
