--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <div class="title">Etch-a-Sketch</div>
-  <div class="container">
-    <div class="grid"></div>
-    <div class="menu"></div>
+  <div class="grid"></div>
+  <div class="menu">
+    <div class="slidecontainer">
+      <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
+      <div class="sliderValue"></div>
+    </div>
   </div>
   
 </body>
