Refactor flexbox styling

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="title">Etch-a-Sketch</div>
-  <div class="grid"></div>
-  <div class="menu">
-    <div class="slidecontainer">
+  <div class="middleContainer">
+    <div class="title">Etch-a-Sketch</div>
+    <div class="grid"></div>
+    <div class="slidercontainer">
       <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
       <div class="sliderValue"></div>
     </div>
   </div>
-  
+
 </body>
 </html>
