--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body>
   <div class="middleContainer">
     <div class="title">Etch-a-Sketch</div>
-    <div class="grid"></div>
+    <div class="gridContainer">
+      <div class="leftMenu">
+        <div>Hello</div>
+        <div>hi</div>
+      </div>
+      <div class="grid"></div>
+      <div class="rightMenu"></div>
+    </div>
     <div class="slidercontainer">
       <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
       <div class="sliderValue"></div>
