Add grid toggle

--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
       </div>
       <div class="grid"></div>
       <div class="rightMenu">
-        <div class="colorMode">
-          Color Mode
+        <div class="functionButtons">
+          <div class="colorMode">
+            Color Mode
+          </div>
+          <div class="eraserMode">
+            Eraser
+          </div>
+          <div class="clearMode">
+            Clear
+          </div>
         </div>
-        <div class="eraserMode">
-          Eraser
-        </div>
-        <div class="clearMode">
-          Clear
+        <div class="gridCheckboxContainer">
+          <input type="checkbox" id="gridCheckbox">
+          <label for="gridCheckbox">Grid</label>
         </div>
       </div>
     </div>
