--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Etch-a-Sketch</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+  <link rel="icon" href="images/easel.svg" />
 </head>
 <body>
   <div class="middleContainer">
