--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="gridContainer">
       <div class="leftMenu">
         <div class="colorMenu">
-          <label for="colorPicker">Select Color:</label>
+          <!-- <label for="colorPicker">Select Color:</label> -->
           <div class="colorPickerContainer">
             <input type="color" id="colorPicker">
           </div>
